@@ -3,6 +3,7 @@ V 3.3.0:
   - Fixed slow download speeds
   - Fixed crashes when running without a tty
   - Added --silent flag
+  - Added --fallback-channel option
 V 3.2.0:
   - Added notice that python 2 is no longer supported
   - Fixed program hanging when no channels are joined
